--- a/mport/mport.1
+++ b/mport/mport.1
@@ -1,4 +1,4 @@
-.\" Copyright (c) 2010, 2011, 2015 Lucas Holt
+.\" Copyright (c) 2010, 2011, 2015, 2021 Lucas Holt
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -22,15 +22,16 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $MidnightBSD$
 .\"
-.Dd November 29, 2015
+.Dd October 13, 2021
 .Dt MPORT 1
 .Os
 .Sh NAME
 .Nm mport
 .Nd "mport utility"
 .Sh SYNOPSIS
+.Nm
+.Cm autoremove
 .Nm
 .Cm clean
 .Nm
@@ -77,6 +78,9 @@ installed packages.
 .Pp
 Here is the list of standard commands:
 .Bl -tag -width ".Cm install"
+.It Cm autoremove
+Removes all packages installed as dependencies that are no longer needed
+as the original package depending on them has been removed.
 .It Cm clean
 Clean up old packages not found in the index and perform maintenence on the
 database.
