--- a/mport/mport.1
+++ b/mport/mport.1
@@ -79,7 +79,7 @@ installed packages.
 Here is the list of standard commands:
 .Bl -tag -width ".Cm install"
 .It Cm autoremove
-Removes all packages installed as dependencies that are no longer needed
+Experimental! Removes all packages installed as dependencies that are no longer needed
 as the original package depending on them has been removed.
 .It Cm clean
 Clean up old packages not found in the index and perform maintenence on the
