--- a/mport/mport.1
+++ b/mport/mport.1
@@ -40,6 +40,13 @@
 .Nm
 .Cm clean
 .Nm
+.Cm config get
+.Op Ar setting name
+.Nm
+.Cm config set
+.Op Ar setting name
+.Op Ar setting value
+.Nm
 .Cm cpe
 .Nm
 .Cm list
@@ -102,6 +109,10 @@ as the original package depending on them has been removed.
 .It Cm clean
 Clean up old packages not found in the index and perform maintenence on the
 database.
+.It Cm config get Ao name Ac
+Displays the value of a configuration setting
+.It Cm config set Ao name Ac Ao value Ac
+Sets the value of the configuration setting.
 .It Cm cpe
 List all CPE information for each installed package
 .It Cm list
@@ -136,6 +147,18 @@ Upgrade all currently installed packages with the latest version
 .It Cm verify
 Verify currently installed packages have not had files deleted or modified from the original
 installation.
+.Sh SETTINGS
+The
+.Nm
+command has the following settings that modify it's behavior:
+.It Cm mirror_region
+Determines which mirror region to use to fetch packages.  Valid values are currently us, uk, jp
+The current list is always available in the mport index file in /var/db/mport/index.db in the mirrors table
+.It Cm target_os
+Override the OS version used to fetch packages and install them. If undefined, we try /bin/midnightbsd-version first and
+fall back to the running kernel version.
+.It Cm index_last_check
+This is the last time the index file was checked for an update.
 .Sh HISTORY
 The
 .Nm
