--- a/mport/mport.1
+++ b/mport/mport.1
@@ -139,7 +139,7 @@ Fetch and install a package
 Search package names and descriptions.  Supports globbing queries such as 
 "*php*".
 .It Cm stats
-List statistcs about available and installed packages.
+List statistics about available and installed packages.
 .It Cm update
 Fetch and update a specific package
 .It Cm upgrade
