--- a/mport/mport.1
+++ b/mport/mport.1
@@ -23,7 +23,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"
-.Dd October 13, 2021
+.Dd July 3, 2022
 .Dt MPORT 1
 .Os
 .Sh NAME
@@ -70,6 +70,8 @@
 .Nm
 .Cm install
 .Op Ar name
+.Nm
+.Cm mirror list
 .Nm
 .Cm search
 .Op Ar name ...
@@ -135,6 +137,8 @@ Force a download of the index to refresh it without waiting for the timeout inte
 allows the user to get the latest list of packages.
 .It Cm install
 Fetch and install a package
+.It Cm mirror list
+Lists all available package mirrors.
 .It Cm search
 Search package names and descriptions.  Supports globbing queries such as 
 "*php*".
