update mirror list and bump

--- a/mport/mport.1
+++ b/mport/mport.1
@@ -156,7 +156,7 @@ The
 .Nm
 command has the following settings that modify it's behavior:
 .It Cm mirror_region
-Determines which mirror region to use to fetch packages.  Valid values are currently us, uk, jp
+Determines which mirror region to use to fetch packages.  Valid values are currently us, us2, us3, uk, jp
 The current list is always available in the mport index file in /var/db/mport/index.db in the mirrors table
 .It Cm target_os
 Override the OS version used to fetch packages and install them. If undefined, we try /bin/midnightbsd-version first and
