--- a/libmport/mport.3
+++ b/libmport/mport.3
@@ -219,6 +219,9 @@ The document part is ignored.
 FTP and HTTP proxies are supported; if no scheme is specified, FTP is
 assumed.
 If the proxy is an FTP proxy,
+.It Ev ASSUME_ALWAYS_YES
+If set to a non empty value, will assume any question should be answered
+with a yes.
 .Sh SEE ALSO
 .Xr mport 1 ,
 .Xr mports 7
