rework output dir

--- a/libmport/mport.3
+++ b/libmport/mport.3
@@ -109,7 +109,7 @@
 .Ft int
 .Fn mport_instance_free "mportInstance *mport"
 .Ft int
-.Fn mport_instance_init "mportInstance *mport" "const char *root"
+.Fn mport_instance_init "mportInstance *mport" "const char *root" "const char *outputPath"
 .Ft mportInstance *
 .Fn mport_instance_new
 .Ft void
