add initial support for disabling index fetch IF it already exists.

--- a/libmport/mport.3
+++ b/libmport/mport.3
@@ -112,7 +112,7 @@
 .Ft int
 .Fn mport_instance_free "mportInstance *mport"
 .Ft int
-.Fn mport_instance_init "mportInstance *mport" "const char *root" "const char *outputPath"
+.Fn mport_instance_init "mportInstance *mport" "const char *root" "const char *outputPath" "bool noIndex"
 .Ft mportInstance *
 .Fn mport_instance_new
 .Ft void
