--- a/mport/mport.1
+++ b/mport/mport.1
@@ -23,12 +23,12 @@
 .\" SUCH DAMAGE.
 .\"
 .\"
-.Dd October 24, 2022
+.Dd October 25, 2022
 .Dt MPORT 1
 .Os
 .Sh NAME
 .Nm mport
-.Nd "mport utility"
+.Nd "mport package manager"
 .Sh SYNOPSIS
 .Nm
 .Op Fl v
