--- a/mport/mport.1
+++ b/mport/mport.1
@@ -23,7 +23,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"
-.Dd April 29, 2023
+.Dd September 4, 2023
 .Dt MPORT 1
 .Os
 .Sh NAME
@@ -77,6 +77,8 @@
 .Op Ar name
 .Nm
 .Cm mirror list
+.Nm
+.Cm mirror select
 .Nm
 .Cm purl
 .Nm
@@ -155,6 +157,8 @@ allows the user to get the latest list of packages.
 Fetch and install a package
 .It Cm mirror list
 Lists all available package mirrors.
+.It Cm mirror select
+Pings various mirrors to attempt to select the closest and sets it as default.
 .It Cm purl
 Lists PURL for each installed package
 .It Cm search
