add new env var HANDLE_RC_SCRIPTS and a setting that lets the user control if rc.d scripts are run

--- a/libmport/mport.3
+++ b/libmport/mport.3
@@ -225,6 +225,8 @@ If the proxy is an FTP proxy,
 .It Ev ASSUME_ALWAYS_YES
 If set to a non empty value, will assume any question should be answered
 with a yes.
+.It Ev HANDLE_RC_SCRIPTS
+If set to a non empty value, will start/stop rc.d scripts included in the package.
 .Sh SEE ALSO
 .Xr mport 1 ,
 .Xr mports 7
