example of mport add

--- a/mport/mport.1
+++ b/mport/mport.1
@@ -276,6 +276,9 @@ Determine which package installed a file:
 .Pp
 Check installed packages for checksum mismatches:
 .Dl # mport verify
+.Pp 
+Install a local package file:
+.Dl $ mport add /home/myuser/mypkg.mport 
 .Sh HISTORY
 The
 .Nm
