--- a/libmport/mport.3
+++ b/libmport/mport.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd January 24, 2024
+.Dd August 8, 2024
 .Dt MPORT 3
 .Os
 .Sh NAME
@@ -227,6 +227,10 @@ If set to a non empty value, will assume any question should be answered
 with a yes.
 .It Ev HANDLE_RC_SCRIPTS
 If set to a non empty value, will start/stop rc.d scripts included in the package.
+.It Ev PKG_DB
+Specifies an alternate location to download the mport index database and for opening
+it while using mport.  Typically an absolute path to the file extracted... 
+/var/db/mport/index.db is the default.
 .Sh SEE ALSO
 .Xr mport 1 ,
 .Xr mports 7
