mport download should support fetch of all packages #87

--- a/libmport/mport.3
+++ b/libmport/mport.3
@@ -90,7 +90,7 @@
 .Ft int
 .Fn mport_delete_primative "mportInstance *mport" "mportPackageMeta *pack" "int force"
 .Ft int
-.Fn mport_download "mportInstance *mport" "const char *pkgname" "bool includeDependencies" "char **path"
+.Fn mport_download "mportInstance *mport" "const char *pkgname" "bool all" "bool includeDependencies" "char **path"
 .Ft int
 .Fn mport_err_code
 .Ft const char *
