Add a glob search example

--- a/mport/mport.1
+++ b/mport/mport.1
@@ -279,6 +279,9 @@ Check installed packages for checksum mismatches:
 .Pp 
 Install a local package file:
 .Dl $ mport add /home/myuser/mypkg.mport 
+.Pp
+Search for all xfce related packages:
+.Dl $ mport search xfce*
 .Sh HISTORY
 The
 .Nm
