update usage for verify

--- a/mport/mport.1
+++ b/mport/mport.1
@@ -104,6 +104,7 @@
 .Cm upgrade
 .Nm
 .Cm verify
+.Op Ar name ...
 .Sh DESCRIPTION
 The
 .Nm
@@ -196,7 +197,7 @@ List statistics about available and installed packages.
 Fetch and update a specific package
 .It Cm upgrade
 Upgrade all currently installed packages with the latest version
-.It Cm verify
+.It Cm verify Ao name Ac
 Verify currently installed packages have not had files deleted or modified from the original
 installation.
 .Sh SETTINGS
