--- a/mport/mport.1
+++ b/mport/mport.1
@@ -1,4 +1,4 @@
-.\" Copyright (c) 2010, 2011, 2015, 2021, 2022, 2025 Lucas Holt
+.\" Copyright (c) 2010, 2011, 2015, 2021, 2022, 2025, 2026 Lucas Holt
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -23,7 +23,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"
-.Dd March 21, 2025
+.Dd January 16, 2026
 .Dt MPORT 1
 .Os
 .Sh NAME
@@ -43,6 +43,12 @@
 .Cm add
 .Op Fl A
 .Op Ar name
+.Nm
+.Cm annotate
+.Op Fl S
+.Op Fl q
+.Op Ar name
+.Op Ar tag
 .Nm
 .Cm autoremove
 .Nm
