--- a/libmport/mport.3
+++ b/libmport/mport.3
@@ -1,5 +1,5 @@
 .\"-
-.\" Copyright (c) 2012, 2015, 2022, 2024 Lucas Holt
+.\" Copyright (c) 2012-2026 Lucas Holt
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -23,10 +23,12 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd August 8, 2024
+.Dd January 16, 2026
 .Dt MPORT 3
 .Os
 .Sh NAME
+.Nm mport_annotation_get ,
+.Nm mport_annotation_set ,
 .Nm mport_clean_database ,
 .Nm mport_clean_oldpackages ,
 .Nm mport_create_primative ,
@@ -81,6 +83,10 @@
 .Sh SYNOPSIS
 .In mport.h
 .In mport_private.h
+.Ft int
+.Fn mport_annotation_get "mportInstance *mport" "const char *pkg" "const char *tag" "char **annotation"
+.Ft int
+.Fn mport_annotation_set "mportInstance *mport" "const char *pkg" "const char *tag" "const char *annotation"
 .Ft int
 .Fn mport_clean_database "mportInstance *mport"
 .Ft int
